Add tests for linker logic